--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   frontend:
     build:
@@ -9,10 +7,12 @@ services:
       - "3000:80"
     environment:
       - NODE_ENV=production
-    depends_on:
-      - backend
     networks:
       - app-network
+    restart: unless-stopped
+    container_name: qode-frontend-prod
+    tty: true
+    stdin_open: true
 
   frontend-dev:
     build:
@@ -26,40 +26,13 @@ services:
     environment:
       - NODE_ENV=development
       - VITE_API_URL=http://localhost:8000
-    depends_on:
-      - backend
     networks:
       - app-network
-
-  backend:
-    image: qode-backend:latest
-    ports:
-      - "8000:8000"
-    environment:
-      - DB_HOST=mysql
-      - DB_DATABASE=qode_news
-      - DB_USERNAME=root
-      - DB_PASSWORD=password
-    depends_on:
-      - mysql
-    networks:
-      - app-network
-
-  mysql:
-    image: mysql:8.0
-    ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_DATABASE=qode_news
-      - MYSQL_ROOT_PASSWORD=password
-    volumes:
-      - mysql_data:/var/lib/mysql
-    networks:
-      - app-network
+    restart: unless-stopped
+    container_name: qode-frontend-dev
+    tty: true
+    stdin_open: true
 
 networks:
   app-network:
     driver: bridge
-
-volumes:
-  mysql_data:
